fix PMD warning
git-svn-id: https://server.mycore.de/svn/maven/mir/trunk@31337 7089d063-bc14-496d-ac90-53de1872eb6c